Fix CSS overflow issues in child components

--- a/app/assets/stylesheets/components/_post_info.scss
+++ b/app/assets/stylesheets/components/_post_info.scss
@@ -41,6 +41,11 @@
     background-color: black;
     max-width: 100%;
     overflow: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     position: relative;
 
     @media only screen and (max-width: 700px) {
@@ -279,6 +284,7 @@
   font-size: 0.88rem;
 
   .comments-index {
+    overflow: initial;
     @include flex-down;
     justify-content: flex-start;
 
