--- a/app/assets/stylesheets/components/_profile_user_info.scss
+++ b/app/assets/stylesheets/components/_profile_user_info.scss
@@ -242,6 +242,10 @@
     width: $follows-list-width;
     left: calc(50% - #{$follows-list-width / 2});
 
+    & > * {
+      overflow: initial;
+    }
+
     @media only screen and (max-width: 700px) {
       $mobile-follows-list-width: 90vw;
       height: 60vh;
